--- a/app/views/account.erb
+++ b/app/views/account.erb
@@ -3,10 +3,18 @@
   <head>
     <meta charset="UTF-8">
     <title>title</title>
-    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">  
+    <link rel="stylesheet" href="stylesheets/bootstrap.css" type="text/css">
   </head>
   <body id="page-top">
-    
+
+  <% if Helpers.is_logged_in?(@session) %>
+    <%= "Welcome #{Helpers.current_user(@session).username}" %>
+    <%= "Account Balance: $#{Helpers.current_user(@session).balance}" %>
+  <% else %>
+    <a href="/">Home</a>
+  <% end %>
+
+  <a href="/logout">Log Out</a>
 
   </body>
 </html>
